--- a/epub3/Content/epilog.xhtml
+++ b/epub3/Content/epilog.xhtml
@@ -19,7 +19,7 @@ Not aware that the senate had upped the stakes, the Dammons had taken advantage 
 the senate has proofed unable to provide the council with as sharp a military mind
 as those of her grandfather an her father.
 </p><p>
-Ugh was Leto's assistant that had been flown in in a hurry after humans managed
+Ugh was Leto's assistant that had been flown in in a hurry after hybrids managed
 to put a tiny maned vessel on Mara, or as hybrids referred to it 'the' moon.
 As if Woldera was the only planet with a moon. One of the telltale signs that hybrid
 culture and hybrid technology were out of sync. 
@@ -29,11 +29,11 @@ millenniums. Two standard years after her father died and Leto took his place
 in the council, Dammons managed to get the industrial revolution started prematurely. 
 </p><p>
 Machiel was soon replaced by Leto, but once the industrial revolution
-was doing its thing, human population spiked and there are only so many drones
+was doing its thing, hybrid population spiked and there are only so many drones
 a four man team can deploy. 
 
-And as they couldn't keep all humans under drone surveillance, Dammons were bound to
-push even more technology to the humans.
+And as they couldn't keep all hybrids under drone surveillance, Dammons were bound to
+push even more technology to the hybrids.
 </p><p>
 Gabriela had been asking the interstellar senate for reinforcements. Only after the
  hybrid moon-landing did the senate send  'reinforcements' in the form of a level
@@ -41,7 +41,7 @@ one assistant for Leto.
 
 Although Gabriela was highly sceptical at first, Uhm did bring
 novel ideas to the struggle. forty years after the moon landing the biggest manned
-space accomplishment of the humans was as Uhm kept reminding her,
+space accomplishment of the hybrids was as Uhm kept reminding her,
 a space station so close to the   surface that on Cirus-7 it would fly straight
 into a mountain. 
 
@@ -53,19 +53,19 @@ going to be an internet, why not introduce hybrids to technologies that allow
 sufficient bandwidth for sensors. 
 
 Uriella and Uhm had worked together on what the hybrids would probably refer to as a 'surveillance 
-botnet'. Billions of human built personal computing devices involuntarily working as Damon sensors.
+botnet'. Billions of hybrid built personal computing devices involuntarily working as Dammon sensors.
 </p><p>
-Ugh had helped halt the rapid development of human society by giving humans more technology
-ourselves. The humans had a fragile economic system and Ugh had been working on destabilizing 
+Ugh had helped halt the rapid development of hybrid society by giving hybrids more technology
+ourselves. The hybrids had a fragile economic system and Ugh had been working on destabilizing 
 that. 
 
 There were signs Ugh may be succeeding and if the fragile monetary system collapsed, 
 projection were that with technologies getting conveniently lost in bankruptcies etc, 
-the Archan council could set human society back two or three generations technology wise.
+the Archan council could set hybrid society back two or three generations technology wise.
 </p><p>
 Gabriela knew they could not hope to turn back the industrial revolution. Those millenniums were
 lost. If only she could make the Dammons believe. After she learned the senate
-had upped the stakes, she released a captured Damon with all the horrific details.
+had upped the stakes, she released a captured Dammon with all the horrific details.
 </p><p>
 Apparently the Dammons dismissed the information as trickery. Something that was to be expected
 it was the type of trick her father could have pulled. The old reports that Raphael, a member 
@@ -79,7 +79,7 @@ peers with at least 4/3 the initially used force directed at the original source
 force or any of its peers. Hybrid culture was many many millenniums from the ability to develop 
 structural deescalating retaliation, the council knew that much. 
 </p><p>
-The senate apparently judged the human development by their moon-landing ability. As normally
+The senate apparently judged the hybrid development by their moon-landing ability. As normally
 a society would develop deescalating retaliation long before their first walk
 on one of their planets moons. For those civilizations an escalating war fleet would 
 effectively be a call for negotiations. But for a primitive civilization
