--- a/epub3/Content/preface.xhtml
+++ b/epub3/Content/preface.xhtml
@@ -15,12 +15,11 @@
 </div>
 <p>
 I'm not a novelist, in fact, although I love reading fantasy and Sci-fi  and had been
-creating wild stories in my head for decades,
-I never had the urge to write any of them down.
+creating wild stories in my head for decades, I never had the urge to write any of them down.
 During my winter season stay in west Africa I got inspired by several aspects of life in west Africa. The west African
-winter temperatures that even at night
-never dropped below 80°F (in the Netherlands,
-even summer days that peek above 80°F are pretty scarce). The lively religious life with a significant role for angels. By the Benin Voudoun festival and by the always buzzy tiny ants that kept investing our families apartment.
+winter temperatures that even at night never dropped below 80°F (in the Netherlands,
+even summer days that peek above 80°F are pretty scarce). The lively religious life with a significant role for angels.
+ By the Benin Voudoun festival and by the always buzzy tiny ants that kept investing our families apartment.
 </p><p>
 Lacking any of the tools of my trade,  not creating any of the rather technical products I usually spent my days creating, a first seed started growing.
 
@@ -28,11 +27,11 @@ The Orus-2 seasonal migrations started to solidify in my head. Armed with just t
 </p><p>
 My writings are most likely crude. Most writing I've done have been tech papers and articles,   but I do feel the saga's outline and the Orus system are a solid foundation of what could be an amazing Sci-Fi novel.
 
-Given that due to my limited fiction writing skills this work does not do justice to the story-line, I decided to try and make cooperative creation of a final work based on this story-line a serious option. Lacking any handles to do so without funding coworker from my rather thin wallet, an idea started to solidify that was much bigger than this story-line. The idea of a colored BitCoin based copyright licence.
+Given that due to my limited fiction writing skills this work does not do justice to the story-line, I decided to try and make cooperative creation of a final work based on this story-line a serious option. Lacking any handles to do so without funding coworker from my rather thin wallet, an idea started to solidify that was much bigger than this story-line. The idea of a CryptoCoin based copyright licence.
 </p><p>
-This work is now the first submission to BitNym, aimed to be used as an example of usage of the Creative Bitclaim copyright license.
+This work is now the first submission to Creative BitNym, aimed to be used as an example of usage of the Creative BitNym copyright license.
 
-I hope you will enjoy reading this tale as much as I enjoyed writing it. If you did and would like to contribute to making it a great novel, or if you yourself have sagas worth growing cooperatively, or are interested in contributing to the community effort to  develop the 1 version of the Creative BitClaim copyright licence, please join me on http://pibara.github.io/bitnym/
+I hope you will enjoy reading this tale as much as I enjoyed writing it. If you do and would like to contribute to making it a great novel, or if you yourself have sagas worth growing cooperatively, or are interested in contributing to the community effort to  develop the 1.0 version of the Creative BitNym copyright licence, please join me on http://pibara.github.io/bitnym/
 
 </p>
 </section></body></html>
