--- a/epub3/Content/epilog.xhtml
+++ b/epub3/Content/epilog.xhtml
@@ -24,8 +24,8 @@ to put a tiny maned vessel on Mara, or as hybrids referred to it 'the' moon.
 As if Woldera was the only planet with a moon. One of the telltale signs that hybrid
 culture and hybrid technology were out of sync. 
 
-The industrial revolution was not to have happened for at least two more
-millenniums. Two standard years after her father died and Leto took his place
+The hybrid's industrial revolution was not to have happened for at least two more
+millenniums. Two standard years after her father died and Machiel took his place
 in the council, Dammons managed to get the industrial revolution started prematurely. 
 </p><p>
 Machiel was soon replaced by Leto, but once the industrial revolution
@@ -35,28 +35,28 @@ a four man team can deploy.
 And as they couldn't keep all hybrids under drone surveillance, Dammons were bound to
 push even more technology to the hybrids.
 </p><p>
-Gabriela had been asking the interstellar senate for reinforcements. Only after the
+Gabriela had been asking the interstellar senate for reinforcements for years. Only after the
  hybrid moon-landing did the senate send  'reinforcements' in the form of a level
 one assistant for Leto. 
 
 Although Gabriela was highly sceptical at first, Uhm did bring
-novel ideas to the struggle. forty years after the moon landing the biggest manned
+novel ideas to the struggle. forty Wolderian years after the moon landing the biggest manned
 space accomplishment of the hybrids was as Uhm kept reminding her,
 a space station so close to the   surface that on Cirus-7 it would fly straight
 into a mountain. 
 
-Much of the details on the technology used for the moon landing had conveniently be lost, 
+Much of the details on the technology used for the original moon landing had conveniently be lost, 
 something you could leave to Ugh. 
 
 Ugh also introduced the idea of fighting fire with fire. If there is
-going to be an internet, why not introduce hybrids to technologies that allow 
+going to be an global hybrid computer network spanning the whole of Wolders, why not introduce hybrids to technologies that allow 
 sufficient bandwidth for sensors. 
 
 Uriella and Uhm had worked together on what the hybrids would probably refer to as a 'surveillance 
 botnet'. Billions of hybrid built personal computing devices involuntarily working as Dammon sensors.
 </p><p>
 Ugh had helped halt the rapid development of hybrid society by giving hybrids more technology
-ourselves. The hybrids had a fragile economic system and Ugh had been working on destabilizing 
+ourselves. The hybrids had a fragile economic system and Ugh had also been working on destabilizing 
 that. 
 
 There were signs Ugh may be succeeding and if the fragile monetary system collapsed, 
@@ -68,7 +68,7 @@ lost. If only she could make the Dammons believe. After she learned the senate
 had upped the stakes, she released a captured Dammon with all the horrific details.
 </p><p>
 Apparently the Dammons dismissed the information as trickery. Something that was to be expected
-it was the type of trick her father could have pulled. The old reports that Raphael, a member 
+it would have been the type of trick her father could have pulled. The old reports that Raphael, a member 
 of the original council had filed had made it trough the bureaucracy of the republics ministry
 of suggestions. The report had been presented to the senate by a civil servant who understood 
 very little about its content. 
@@ -76,7 +76,7 @@ The result was contrary to what Raphael had intended. The quarantine drones were
 replaced with full sized war drones. War drones were programmed for escalating retaliation.
 This meant that any use of force against a war drone was met by that drone or its
 peers with at least 4/3 the initially used force directed at the original source of the 
-force or any of its peers. Hybrid culture was many many millenniums from the ability to develop 
+force or any of its peers. Hybrid culture was still many many millenniums from the ability to develop 
 structural deescalating retaliation, the council knew that much. 
 </p><p>
 The senate apparently judged the hybrid development by their moon-landing ability. As normally
@@ -91,15 +91,15 @@ referred to as Beluga wales had successfully partitioned to acquire a representa
 under the repressed civilization clause. The new Beluga senator left no chance unused to
 argue that Hybrid civilization was a marionette civilization of pets used by an alien 
 civilization to wage a secret war against her species. The Beluga senator was highly intelligent,
-but had not yet mastered all the subtleties of interstellar diplomacy. The Beluga situation
+but she had not yet mastered all the subtleties of interstellar diplomacy. The Beluga situation
 on Woldera did however not escape the attention of the senate, this while the Hybrids didn't
-have a shadow of a clue that they were a thread to the habitat of a superior intelligence with a 
-seat in the interstellar senate living on their planet. No clue that they were just inches away
+have a shadow of a clue that they were a threat to the habitat of a superior intelligence with a 
+seat in the interstellar senate that was living on their planet. No clue that they were just inches away
 from creating a situation that would give the repeated partitions for a second great flood for 
 Woldera a solid chance of succeeding.
 </p><p>
 
-The Dammons were creating the tool of their own demise.
+All and all the Dammons were creating the tool of their own demise.
 All the council could do was try to keep the upper hand in their struggle against
 the Dammons for as long as they could.
 </p>
